@@ -162,7 +162,7 @@ class BuildSnap(BuilderProxyOperationMixin, VCSOperationMixin,
         logger.info("Running repo phase...")
         env = self.build_proxy_environment(proxy_url=self.args.proxy_url)
         self.vcs_fetch(self.args.name, cwd="/build", env=env)
-        self.save_status(os.path.join("/build", self.args.name))
+        self.vcs_update_status(os.path.join("/build", self.args.name))
 
     @property
     def image_info(self):
